[package]
name = "nemesis"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-service = "2.0"
actix-rt = "2.9"
actix-http = "3.9.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
flate2 = "1.0"  # For zlib compression/decompression

# Configuration
config = "0.13"
dotenv = "0.15"

# Utility
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2.9"
reqwest = { version = "0.11", features = ["json"] }